[package]
name = "io-queue-rdma"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-cm = {path = "../rdma-cm"}
tracing = "0.1.26"
nix = "0.21"
arrayvec = "0.7.1"
futures = "0.3.16"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.19"